--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.24.1",
     "react-scripts": "^5.0.1",
-    "react-type-animation": "^3.2.0"
+    "react-type-animation": "^3.2.0",
+    "recharts": "^2.15.1"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
