--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.24.1",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^11.0.5",
     "react-type-animation": "^3.2.0",
     "recharts": "^2.15.1"
   },
